--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
     <!-- CSS PERSONAL -->
-    <link href="../../css/innovus-style.css" rel="stylesheet">
+    <link href="./innovus-style.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@100;200;300;400;500;600;700;800;900&amp;family=DM+Sans:wght@100;200;300;400;500;600;700;800;900&amp;subset=latin&amp;display=swap" rel="stylesheet">
 
@@ -49,7 +49,153 @@
         </div>
       </nav>
 
-    <!-- FIN NAVBAR -->
+    <!-- END NAVBAR -->
+    <!-- HEADER  -->
+    <div class="BANNERMAIN">
+        <div class=" container-fluid ">
+            <div class="row m-0 padding-lg">
+                <div class="col-12  pt-5 pb-5 px-3 px-lg-0" >
+                    <div class="col-12 col-md-7 " >
+                        <h2 class="mb-md-4 mt-md-5">Descubrí el <span class="bolder">mejor curso de fotografía</span> del país</h2>
+                        <p class="info pt-2 pt-lg-0">Sé parte de Aprende Fotografía y obtené <span class="bolder">acceso de por vida</span> al curso y comunidad de soporte exclusiva que te lleva de 0 a <span class="bolder">ser un experto</span> 😎</p>
+                        <div class="row pb-5">
+                            <div class="col-12 col-md-6 col-lg-7 col-xl-7 col-xxl-6  info-2 ">
+                                <p class="mb-0"><i class="fa-solid fa-graduation-cap icons-color graduate-icon pe-1 pe-lg-2"></i> Avalado por <span class="bolder">3.100</span> estudiantes satisfechos</p>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4 col-xl-4 info-2 stars pt-2 pt-lg-0 pb-0">
+                                <p class="mb-0"><span class="bolder pe-1">4.7</span> <i class="fa-solid fa-star icons-color"></i> <i class="fa-solid fa-star icons-color"></i> <i class="fa-solid fa-star icons-color"> </i> <i class="fa-solid fa-star icons-color"></i> <i class="fa-solid fa-star icons-color"></i></p>
+                            </div>
+                        </div>   
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </div>   
+    <!-- END HEADER -->
+    <!-- DESCRIPTION SECTION  -->
+    <div class="container-fluid">
+      <div class="row m-0 padding-lg">
+        <div class="col-12 pt-5 pb-5 px-3 px-lg-0">
+          <div class="col-12 col-md-7">
+              <h4 class="mb-4 bolder900">Descripción del curso</h4>
+              <h2 class="title-section mb-3">Aprendé a tomar fotos fascinantes</h2>
+  
+              <p class=" pt-lg-0 pb-0 m-2 mx-0 ">¡Solo necesitas tu usuario de Facebook para poder acceder!</p>
+              <p class="pt-lg-0 pb-0 m-2 mx-0 ">Vas a aprender hasta convertirte en un profesional. El curso está explicado de forma sencilla en <span class="bolder">más de 20 videos</span>.</p>
+              <p class="mb-3 pt-lg-0 m-2 mx-0">Además, recibirás nuestro <span class="bolder">libro digital sin costo</span>, con imágenes y textos que podrás llevar contigo en todo momento.</p>
+              
+              <ul class="px-0 pt-3" id="list-pro">
+                  <li class="pb-3 mx-0"> 
+                      <div class="row ">
+                          <div class="col-auto d-flex align-items-center text-center">
+                              <i class="fas fa-check icons-color list pe-2"></i>
+                          </div>
+                          <div class="col px-0">
+                              <span>Paso a paso y en detalle para que <span class="bolder">aprendas rápido</span></span>
+                          </div>
+                      </div>
+                  </li>
+                  <li class="pb-3 mx-0"> 
+                      <div class="row ">
+                          <div class="col-auto d-flex align-items-center text-center">
+                              <i class="fas fa-check icons-color list pe-2"></i>
+                          </div>
+                          <div class="col px-0">
+                            </span> los videos del curso desde tu <span class="bolder">celular, tablet, notebook o PC</span></span>
+                          </div>
+                      </div>
+                  </li>
+                  <li class="pb-3 mx-0"> 
+                      <div class="row ">
+                          <div class="col-auto d-flex align-items-center text-center">
+                              <i class="fas fa-check icons-color list pe-2"></i>
+                          </div>
+                          <div class="col px-0">
+                              <span>Acceso para siempre a nuestra <span class="bolder">comunidad online</span> para despejar dudas y experiencias con otros usuarios.</span>
+                          </div>
+                      </div>
+                  </li>
+  
+              </ul>
+            <div class="row">
+                  <div class="card card-review col-lg-8">
+                      <div class="card-body py-4">
+                          <div class="row " id="row-card">
+                              <div class="col-12 d-lg-none mx-0 m-2"><span class="mb-0 stars-review"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"> </i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></span></div>
+                              <div class="col-3 d-none d-lg-block review-img" >
+                                  <img class="review" src="./img/AdrianaHerrera.jpg" alt="">
+                              </div>
+                              <div class="col-12 col-lg-9  m-0 ">
+                                  <p>"Excelente curso, conciso y preciso. Me sirvió muchísimo para entender las nociones básicas y poder comenzar este desafío que es la fotografía. Muchas gracias"</p>   
+                                  <p class="bolder900 mb-0 d-none d-lg-block">Adriana Herrera <i class="fas fa-check-circle mx-1 icon-color-green"></i><span class="text-grey">Usuario verificado</span></p> 
+                                 <span class="mb-0 stars-review d-none d-lg  -block"><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"> </i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></span>
+                              </div>                        
+                          </div>   
+                          <div class="row d-lg-none" >
+                              <div class="col-3 review-img" id="row-card">
+                                  <img class="review" src="./img/AdrianaHerrera.jpg" alt="">
+                              </div>
+                              <div class="col-9 " id="">
+                                  <p class="bolder900 mb-0">Adriana Herrera <i class="fas fa-check-circle mx-1 icon-color-green"></i><span class="text-grey">Usuario verificado</span></p> 
+                                
+                              </div>
+                          </div>                     
+                      </div>
+                  </div>
+                </div>
+            </div>
+          </div>
+      </div>
+  </div>  
+    <!-- END DESCRIPTION SECTION  -->
+    <!-- BONUS SECTION  -->
+    <div class="container-fluid" id="bonus">
+      <div class="row m-0 padding-lg">
+        <div class="col-12 pt-5 pb-5 px-3 px-lg-0">
+          <div class="col-12 col-md-7">
+              <h4 class="mb-4 bolder900">Bonus</h4>
+              <h2 class="title-section">¡Aproveche esta oferta exclusiva y reciba estos increíbles bonos!</h2>
+  
+              <p class="mt-4 pt-lg-0 pb-3">Inscríbete y <span class="bolder900" >obtén gratis todos estos bonus</span> 🎁</p>
+              <div class="row mt-5">
+                  <div class="col-3 review-img" >
+                      <img class="bonus-img" src="./img/librogratis.svg" alt="bonus libro gratis">
+                  </div>
+                  <div class="col-9 ">
+                      <h5>🎁 BONUS #1</h5>
+                      <h4 class="pt-2 title-section">Libro Digital sin costo</h4>
+                      <p>Incluye teoria de la fotografía para que puedas entender tu cámara</p>
+                  </div>
+              </div>
+              <div class="row pt-5">
+                  <div class="col-3 review-img" >
+                      <img class="bonus-img" src="./img/ejercicios.jpg" alt="bonus libro gratis">
+                  </div>
+                  <div class="col-9 ">
+                      <h5>🎁 BONUS #2</h5>
+                      <h4 class="pt-2 title-section">Ejercicios prácticos</h4>
+                      <p>No te quedes solo con la teoria, te damos video tutoriales para que puedas practicar mientras aprendés</p>
+                  </div>
+              </div>
+              <div class="row pt-5">
+                  <div class="col-3 review-img" >
+                      <img class="bonus-img" src="./img/CONSTANCIA.jpg" alt="bonus libro gratis">
+                  </div>
+                  <div class="col-9 ">
+                      <h5>🎁 BONUS #3</h5>
+                      <h4 class="pt-2 title-section">Incluye Certificado Oficial</h4>
+                      <p>Te otorgamos una constancia oficial de finalización</p>
+                  </div>
+              </div>
+  
+  
+            </div>
+          </div>
+      </div>
+  </div>   
+    <!-- END BONUS SECTION  -->
+
+
 
     <!-- Bootstrap JavaScript Libraries -->
     <script
