--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <a class="navbar-brand p-0 m-0 ps-3 pe-3 " href="#">
-            <img src="../../i/logo200.svg" srcset="../../i/logo200.svg" alt="" class="logo"/>
+            <img src="./img/logo200.svg" srcset="./img/logo200.svg" alt="Logo" class="logo"/>
           </a> 
           
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
