--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
  
  <!-- NAVBAR -->
- <nav class="navbar navbar-expand-lg bg-body-tertiary py-1 mt-5">
-    <div class="container-fluid px-lg-5 ">
+ <nav class="navbar navbar-expand-md bg-body-tertiary py-1 mt-5">
+    <div class="container-fluid px-md-5 ">
 
-      <button class="navbar-toggler ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler  ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand p-0 m-0 ps-3 pe-3 " href="#">
@@ -47,7 +47,7 @@
       
       <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
         <ul class="navbar-nav">
-            <li class="nav-item dropdown pe-3 mb-3 mb-lg-0">
+            <li class="nav-item dropdown pe-3 mb-3 mb-md-0">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Cursos
                 </a>
@@ -59,11 +59,11 @@
         </ul>
         <div class="row">
             <div class="col-12 text-center">
-                <a type="button" id="btn-whatsapp" href="https://api.whatsapp.com/send?phone=+5491158810820&text=Hola, me interesa el curso de fotografía inicial." class="mb-3 d-lg-none btn btn-guardar"><i class="fa-brands fa-whatsapp"></i>  Contáctanos</a>
+                <a type="button" id="btn-whatsapp" href="https://api.whatsapp.com/send?phone=+5491158810820&text=Hola, me interesa el curso de fotografía inicial." class="mb-3 d-md-none btn btn-guardar"><i class="fa-brands fa-whatsapp"></i>  Contáctanos</a>
             </div>
         </div>
     </div>
-        <a type="button" id="btn-whatsapp" href="https://api.whatsapp.com/send?phone=+5491158810820&text=Hola, me interesa el curso de fotografía inicial." class="d-none d-lg-block btn  btn-guardar"><i class="fa-brands fa-whatsapp"></i>  Contáctanos</a>
+        <a type="button" id="btn-whatsapp" href="https://api.whatsapp.com/send?phone=+5491158810820&text=Hola, me interesa el curso de fotografía inicial." class="d-none d-md-block btn  btn-guardar"><i class="fa-brands fa-whatsapp"></i>  Contáctanos</a>
     </div>
   </nav>
 
