--- a/index.html
+++ b/index.html
@@ -157,7 +157,86 @@
     <div class="row m-0 padding-lg px-md-5 px-lg-0 px-3 px-sm-5 px-md-3 px-lg-5 ms-xxl-3 " id="description">
         <div class="col-12 pt-5 pb-5 px-2 px-md-2 px-lg-0">
           <div class="col-12 descripcion-section">
-              <h4 class="mb-4 bolder900">Descripción del curso</h4>
+              <h4 class="mb-3 bolder900">Descripción del curso</h4>
+             <div class="row d-md-none">
+                <div class="col-12 sections pb-3">
+                    <ul class="px-0 " id="list-pro">
+                           <li class="pb-xl-3 p-1 mx-0"> 
+                               <div class="row ">
+                                   <div class="col-auto d-flex align-items-center text-center">
+                                       <i class="fas fa-layer-group icons-color list pe-2"></i>
+                                   </div>
+                                   <div class="col   p-0 pe-1  px-xl-0">
+                                       <p class=" my-0 py-0">Nivel <span class="bolder">Principiante</span></p>
+                                   </div>
+                               </div>
+                           </li>
+                           <li class="pb-xl-3 p-1 "> 
+                               <div class="row ">
+                                   <div class="col-auto d-flex align-items-center text-center">
+                                       <i class="fas fa-clock icons-color list pe-2"></i>
+                                   </div>
+                                   <div class="col  p-0 pe-1  px-xl-0">
+                                   <p class="bolder my-0 py-0">Más de 40hs de contenido</p>
+                                   </div>
+                               </div>
+                           </li>
+                           <li class="pb-xl-3 p-1 "> 
+                               <div class="row ">
+                                   <div class="col-auto d-flex align-items-center text-center">
+                                       <i class="fab fa-youtube icons-color list pe-2"></i>
+                                   </div>
+                                   <div class="col  p-0 pe-1  px-xl-0 ">
+                                   <p class="bolder my-0 py-0">21 clases en video + libro digital sin costo</p>
+                                   </div>
+                               </div>
+                           </li>
+                           <li class="pb-xl-3 p-1 "> 
+                               <div class="row ">
+                                   <div class="col-auto d-flex align-items-center text-center">
+                                       <i class="fas fa-infinity icons-color list pe-2"></i>
+                                   </div>
+                                   <div class="col   p-0 pe-1  px-xl-0 ">
+                                   <p class="bolder my-0 py-0">Acceso ilimitado para siempre al curso</p>
+                                   </div>
+                               </div>
+                           </li>
+                           <li class="pb-xl-3 p-1 "> 
+                               <div class="row ">
+                                   <div class="col-auto d-flex align-items-center text-center">
+                                       <i class="fas fa-user-friends icons-color list pe-2"></i>
+                                   </div>
+                                   <div class="col  p-0 pe-1  px-xl-0">
+                                   <p class="my-0 py-0">Profesor en línea y <span class="bolder">comunidad de ayuda</span></p>
+                                   </div>
+                               </div>
+                           </li>
+                           <li class="pb-xl-3 p-1 "> 
+                               <div class="row ">
+                                   <div class="col-auto d-flex align-items-center text-center">
+                                       <i class="fa-solid fa-computer icons-color list pe-2"></i>
+                                   </div>
+                                   <div class="col  p-0 pe-1  px-xl-0">
+                                   <p class="my-0 py-0">Acceso desde <span class="bolder">PC, notebook, celular o table</span></p>
+                                   </div>
+                               </div>
+                           </li>
+                           <li class="pb-xl-3 p-1 "> 
+                               <div class="row ">
+                                   <div class="col-auto d-flex align-items-center text-center">
+                                       <i class="fa-solid fa-camera icons-color list pe-2"></i>
+                                   </div>
+                                   <div class="col  p-0 pe-1  px-xl-0">
+                                   <p class="my-0 py-0">Para  <span class="bolder">todo tipo de fotografia:</span> paisajes, retratos, viajes</p>
+                                   </div>
+                               </div>
+                           </li>                                
+                       </ul>
+                   </div>
+               
+             </div>
+
+
               <h2 class="title-section mb-3">Aprendé a tomar fotos fascinantes</h2>
   
               <p class=" pt-lg-0  pb-2 m-2 mx-0 ">¡Solo necesitas tu usuario de Facebook para poder acceder!</p>
