--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                                     <div class="row">
                                         <h2 class="mb-md-0  text-center mb-xxl-4 mt-md-4 mt-lg-0 pb-3 title pb-lg-5  px-md-5  mt-lg-5 mt-xl-5">Descubrí el <span class="bolder">mejor curso de fotografía</span> del país</h2>
                                         <p class="info ps-4 pt-2 pt-lg-0 pe-lg-3 px-md-5">Sé parte de Aprende Fotografía y obtené <span class="bolder">acceso de por vida</span> al curso y comunidad de soporte exclusiva que te lleva de 0 a <span class="bolder">ser un experto</span> 😎</p>
-                                        <div class="row ps-4 pb-3 pb-lg-0 pt-lg-2  px-md-5">
-                                            <div class="col-auto pe-3  info-2 ">
+                                        <div class="row ps-4 pb-4 pb-lg-0 pt-lg-2  px-md-5">
+                                            <div class="col-auto pe-0 pe-sm-3  info-2 ">
                                                 <p class="mb-0 small-p"><i class="fa-solid fa-graduation-cap icons-color graduate-icon pe-1 pe-lg-2"></i> Avalado por <span class="bolder">3.100</span> estudiantes satisfechos</p>
                                             </div>
                                             <div class="col-auto col-md-4 col-lg-4 col-xl-4 info-2 stars  pt-lg-0 pb-0">
