--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
                                             </a>
                                         </div>
                                         <div class="col-10 mx-auto pt-3">
-                                            <img src="../../i/logos-pagos.webp" alt="Logos de medios de pagos" class="img-logos-pagos">
+                                            <img src="./i/logos-pagos.webp" alt="Logos de medios de pagos" class="img-logos-pagos">
                                         </div>
                                         <div class="col-12 pt-3 bolder ">
                                             <p class="title-card-sticky m-0">Curso Iniciación a la Fotografía</p>
